{
    "name": "GameplayControls",
    "maps": [
        {
            "name": "General",
            "id": "05ab3beb-cc38-4975-b702-98f34b6fa6eb",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "31dc400d-d165-476c-a172-5ca4179cff7d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RollGlide",
                    "type": "Button",
                    "id": "4706f29a-92ed-4ef9-a511-ff197016bea4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "8f9497e6-88ea-46d1-b84f-bb07f3ff786d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "Value",
                    "id": "8c42c2c6-df8b-48dd-8382-7118e407eae4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStickAim",
                    "type": "Value",
                    "id": "8a4b2ace-8f19-4b75-a90e-fdafc06c8f75",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CancelHarpoon",
                    "type": "Button",
                    "id": "1cdb35cb-d2d2-4f6b-9cb4-280100d5bab1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=1.401298E-45,pressPoint=0.9)",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftTrigger",
                    "type": "Value",
                    "id": "03a73095-d513-4f98-8509-6619e2f8a581",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b1e377e8-c467-4759-989f-fd40024ac57d",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.25)",
                    "groups": "Gamepad",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "5fc39131-1ddf-45de-863f-9a6a9a7257df",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "48673022-faed-4f70-8bf9-ac445d767846",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f2171d63-8440-409b-bbfc-149249ba0bc5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1976c480-ae89-4886-ad79-097edc6ad17a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c50514b3-420a-43ac-a418-75e5aa5cf96b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6962b80e-ae91-4d11-a94d-9fdacf8c7d15",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "RollGlide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49fbf699-be46-47c9-97ed-4331d5e65719",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "RollGlide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90b9d604-b717-48e6-9cd9-35b81fbf3e9f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d93f06a-b2e4-4bd0-82e2-6cc323e78b22",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a64f3aa1-7bc3-45e6-8bca-daf3caca6994",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0081d39-d117-41d3-89f5-1efb1b452642",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9d6afd5-06f0-46d1-8a50-9a6117260e17",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "Gamepad",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a057d44a-e606-4756-b701-438c172f5291",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fa0abfc-c92a-4399-be2b-1b549f1ae02f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStickAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f400fc2c-2a3f-4f2a-8304-b926f8d68518",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelHarpoon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da0452c3-1be2-4c1c-bdd1-9cfa436d4913",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelHarpoon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "254a5ad7-3552-4fab-8c8f-edc1cb1980a5",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Regular",
            "id": "1599ba35-11b7-40e7-a1e9-e6e5b09ce6b3",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "6bde8e62-fc55-4681-b03b-ef03694f1991",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "d64d65dc-dae9-45e3-b74c-18040bc19dee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cd0fb01d-a388-4a5b-8a15-d1cf0290769d",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02eef959-3139-4d49-814d-28b779bda53a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43790b97-aa2a-477a-9950-584dd6453b00",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6312fab7-e3c2-4e13-8a7d-f6d27f34d1ad",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Aim",
            "id": "81dda5a9-5a63-4485-9861-061e89691f5d",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "4abe1f74-411c-42d2-8f9f-cc2e3dc9e6f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Harpoon",
                    "type": "Button",
                    "id": "c7595e8c-2892-44aa-b496-fbdaee3b1762",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "73af4fc0-cf36-4714-9059-30c1c3d20b11",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.25)",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06eebbd0-5d9d-4e5a-9016-26aeb735425e",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Hold(duration=0.25)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4535e56a-8eda-4c54-be60-6a60f0528ffd",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardMouse",
                    "action": "Harpoon",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "817ba869-ad4d-480a-818f-86aca322228c",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Hold(duration=1.401298E-45,pressPoint=0.9)",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Harpoon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "KeyboardMouse",
            "bindingGroup": "KeyboardMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}